syntax = "proto3";

package users;

option go_package = "proto;users";

service Users {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Login(LoginRequest) returns (LoginResponse) {}
	
	rpc List(ListRequest) returns (ListResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc ReadByEmail(ReadByEmailRequest) returns (ReadByEmailResponse) {}
}

message User {
	string id = 1;
	string first_name = 2;
	string last_name = 3;
	string email = 4;
}

message CreateRequest {
	string first_name = 1;
	string last_name = 2;
	string email = 3;
	string password = 4;
}

message CreateResponse {
	User user = 1;
	string token = 2;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	User user = 1;
	string token = 2;
}

message ListRequest {}

message ListResponse {
	repeated User users = 1;
}

message ReadRequest {
	repeated string ids = 1;
}

message ReadResponse {
	map<string,User> users = 1;
}

message ReadByEmailRequest {
	repeated string emails = 1;
}

message ReadByEmailResponse {
	map<string,User> users = 1;
}